# Excel2CSV

./: .gitignore  CMakeLists.txt  LICENSE  README.md  setup.py
.github/workflows/: ci.yml
bindings/: bindings.cpp
src/: converter.cpp
